# envsync

./: .envsync.json  .gitignore  README.md  pyproject.toml
backend/app/: audit.py  auth.py  crypto.py  db.py  main.py  models.py
backend/app/routes/: env.py
cli/envsync/: main.py
envsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_auth_rbac.py  test_cli.py  test_crypto.py  test_diff.py  test_routes.py
