[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envsync"
version = "0.1.0"
description = "Encrypted environment vault core"
requires-python = ">=3.14"
dependencies = [
  "cryptography>=42",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
envsync = "cli.envsync.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
